correct section nav and header height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ section h2 {
 }
 
 section {
-    padding: 100px 0;
+    padding: 130px 0;
 }
 
 section p {
@@ -481,6 +481,9 @@ h1.centeredText {
 }
 
 @media (max-width: 1100px) {
+    .nav {
+        height: 64px
+    }
     .menuButton {
         position: absolute;
         display: flex;
